name:                scotty-binding-play
version:             0.1.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Yusuke Nomura
maintainer:          yunomu@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Web.Scotty.Binding.Play
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  ghc-options:         -Wall
  build-depends:       base ==4.*
                     , bytestring
                     , mtl
                     , scotty
                     , template-haskell
                     , text

test-suite spec
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      ., test
  main-is:             Spec.hs
  default-extensions:  OverloadedStrings
  ghc-options:         -Wall -threaded
  build-depends:       base ==4.*
                     , bytestring
                     , http-client
                     , hspec
                     , HUnit
                     , mtl
                     , scotty
                     , template-haskell
                     , text
                     , transformers

source-repository head
  type:                git
  location:            git://github.com/welmo/scotty-binding-play
